--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Michael Dixon
-bio:                'Minimal, one column jekyll theme.'
+bio:                'Software Engineer'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 #reading_time:       true
 words_per_minute:   200
@@ -42,7 +42,7 @@ twitter:            dixonbydesign
 #facebook:           username
 github:             qualitydixon
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:          mikedixon
 #xing:              username
 instagram:          username
 #lastfm:            username
