--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ github:             qualitydixon
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:          mikedixon
 #xing:              username
-instagram:          username
+#instagram:          username
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
