--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/grey.png'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-#url:                http://qualitydixon.github.io/
-url:                http://127.0.0.1:4000/
+url:                http://qualitydixon.github.io/
+#url:                http://127.0.0.1:4000/
 
 # Jekyll
 permalink:          /:title/
