--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Michael Dixon
 bio:                'Software Engineer'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+description:        "Eat. Sleep. Code."
 #reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
