--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
 title:              Michael Dixon
 bio:                'Software Engineer'
-description:        "Eat. Sleep. Code."
+description:        'Perpetual Beginner'
 #reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
+logo:               'assets/img/lucha_graffiti.jpg'
 #background:         'assets/img/grey.png'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
