--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ linkedin:          mikedixon
 #soundcloud:        username
 #weibo:             username
 #flickr:            username
-codepen:            qualitydixon
+#codepen:            qualitydixon
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
